# testfork

./: CLAUDE_CODE_PROMPT.txt  NAV2_INTEGRATION_TASKS.txt  README.md
2025-Fall-UCF-RE-RASSOR-System-Autonomy-compvis/model/: convert_to_yolo.py  main.py  train_model.py
2025-Fall-UCF-RE-RASSOR-System-Autonomy-main/: .gitattributes
2025-Fall-UCF-RE-RASSOR-System-Autonomy-main/src/re_rassor_cartography/: CMakeLists.txt
2025-Fall-UCF-RE-RASSOR-System-Autonomy-main/src/re_rassor_cartography/examples/: obstacle_map_example.cpp  simple_test.cpp
2025-Fall-UCF-RE-RASSOR-System-Autonomy-main/src/re_rassor_cartography/include/quadtree/: QuadtreeObstacleMap.h
2025-Fall-UCF-RE-RASSOR-System-Autonomy-main/src/re_rassor_cartography/test/: obstacle_map_tests.cpp
2025-Fall-UCF-RE-RASSOR-System-Autonomy-main/src/re_rassor_traffic_controller/: CMakeLists.txt  package.xml
2025-Fall-UCF-RE-RASSOR-System-Autonomy-main/src/re_rassor_traffic_controller/include/: motor_controller.hpp
2025-Fall-UCF-RE-RASSOR-System-Autonomy-main/src/re_rassor_traffic_controller/src/: motor_controller.cpp
2025-Fall-UCF-RE-RASSOR-System-Autonomy-main/src/re_rassor_traffic_controller/test/: test_integration_e2e.py  test_motor_controller.cpp  test_motor_controller.py
2025-Fall-UCF-RE-RASSOR-System-Autonomy-mission-control/: README.md
2025-Fall-UCF-RE-RASSOR-System-Autonomy-mission-control/src/re_rassor_interfaces/: CMakeLists.txt  package.xml
2025-Fall-UCF-RE-RASSOR-System-Autonomy-mission-control/src/re_rassor_interfaces/msg/: LidarMsg.msg  LocationStatus.msg  YoloMsgArray.msg
2025-Fall-UCF-RE-RASSOR-System-Autonomy-mission-control/src/re_rassor_interfaces/srv/: FinalLocation.srv  LocationStatus.srv  ObstacleArray.srv
2025-Fall-UCF-RE-RASSOR-System-Autonomy-mission-control/src/re_rassor_mission_control/: CMakeLists.txt  package.xml
2025-Fall-UCF-RE-RASSOR-System-Autonomy-mission-control/src/re_rassor_mission_control/include/: mission_control.hpp
2025-Fall-UCF-RE-RASSOR-System-Autonomy-mission-control/src/re_rassor_mission_control/src/: mission_control.cpp  mission_control.py  mission_control.txt
2025-Fall-UCF-RE-RASSOR-System-Autonomy-mission-control/src/re_rassor_mission_control/tests/: mc_waypoints_test.py  test.py
2025-Fall-UCF-RE-RASSOR-System-Autonomy-pathing/: .gitignore  Dockerfile
2025-Fall-UCF-RE-RASSOR-System-Autonomy-pathing/src/re_rassor_cartography/: IMPLEMENTATION_NOTES.md  README.md  TESTING_GUIDE.md  package.xml
2025-Fall-UCF-RE-RASSOR-System-Autonomy-pathing/src/re_rassor_cartography/examples/: obstacle_map_example.cpp  simple_test.cpp
2025-Fall-UCF-RE-RASSOR-System-Autonomy-pathing/src/re_rassor_cartography/test/: obstacle_map_tests.cpp
2025-Fall-UCF-RE-RASSOR-System-Autonomy-pathing/src/re_rassor_interfaces/: CMakeLists.txt  README.md  package.xml
2025-Fall-UCF-RE-RASSOR-System-Autonomy-pathing/src/re_rassor_interfaces/msg/: LidarMsgArray.msg  ObstacleArray.msg  ObstacleDetectionMsg.msg  ObstacleDetectionMsgArray.msg  YoloMsg.msg
2025-Fall-UCF-RE-RASSOR-System-Autonomy-pathing/src/re_rassor_interfaces/srv/: InitialRoverPosition.srv  NewGoal.srv  NewPath.srv
2025-Fall-UCF-RE-RASSOR-System-Autonomy-pathing/src/re_rassor_pathing/: CMakeLists.txt  package.xml  temp.txt
2025-Fall-UCF-RE-RASSOR-System-Autonomy-pathing/src/re_rassor_pathing/include/: dstarlite.hpp  pathsmooth.hpp  quadtree_costmap.hpp  routing_node.hpp  state.hpp
2025-Fall-UCF-RE-RASSOR-System-Autonomy-pathing/src/re_rassor_pathing/src/: dstarlite.cpp  pathsmooth_main.cpp  pathsmoothing.cpp  routing_node.cpp
2025-Fall-UCF-RE-RASSOR-System-Autonomy-pathing/src/re_rassor_pathing/tests/: test_dstarlite.py  test_pathsmooth.cpp
source/ezrassor_controller_server/: __main__.py  request.py
src/ezrassor_description/: CMakeLists.txt  package.xml
src/ezrassor_description/launch/: robot_state_publisher.launch.py
src/ezrassor_description/urdf/: ezrassor.urdf.xacro
