<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- Package name - must match the folder name -->
  <name>ezrassor_description</name>
  <version>0.1.0</version>
  <description>EZRASSOR robot URDF description and TF configuration</description>

  <maintainer email="your-email@example.com">EZRASSOR Team</maintainer>
  <license>MIT</license>

  <!-- Build tool - we use ament_cmake for this package -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies - packages we need when running -->
  <exec_depend>robot_state_publisher</exec_depend>  <!-- Publishes TF from URDF -->
  <exec_depend>xacro</exec_depend>                  <!-- Processes .xacro files -->
  <exec_depend>joint_state_publisher</exec_depend>  <!-- Publishes joint states -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
