<?xml version="1.0"?>
<package format="3">
  <name>re_rassor_pathing</name>
  <version>0.1.0</version>
  <description>re_rassor path planner package</description>

  <maintainer email="nicholas.mistry@ucf.edu">Nicholas Mistry</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <!--<test_depend>ament_cmake_pytest</test_depend>-->

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>re_rassor_cartography</depend>
  <depend>re_rassor_interfaces</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export> 
</package>
